<resources>
    <string name="app_name">ExamenM8Recu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_list">Lista Detalle FireBase</string>
    <string name="menu_registro">Registro</string>
    <string name="menu_header">Menu</string>
    <string name="nombre">Nombre</string>
    <string name="vacio" />
    <string name="edad">Edad</string>
    <string name="curso">Curso</string>
    <string name="registrar">Registrar</string>
    <string name="imagen_joan_d_austria">imagen Joan D\'austria</string>
    <string name="lista_personas">Lista Personas</string>
    <string name="detalle">Detalle</string>
</resources>