<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.examenm8recu.MVVM.Fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_register"
        android:name="com.example.examenm8recu.MVVM.Fragments.RegistroFragment"
        android:label="@string/menu_registro"
        tools:layout="@layout/fragment_registro" />

    <fragment
        android:id="@+id/nav_list"
        android:name="com.example.examenm8recu.MVVM.Fragments.ListFragment"
        android:label="@string/menu_list"
        tools:layout="@layout/fragment_lista" />
</navigation>